# server.js
@@ -10,7 +10,8 @@ const yaml = require('yaml')
 const file = fs.readFileSync('./swagger.yaml', 'utf8')
 const cors = require('cors')
 const swaggerDocument = yaml.parse(file)
-const routes = require('./Routes/MarketRoutes');
+const MarketControllers = require('./Controller/MarketController');
+const ReportController = require('./Controller/ReportControllers');
 
 dotenv.config({ path: './config/.env' });
 
@@ -33,7 +34,9 @@ app.use(cors())
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 app.use(express.json())
 
-app.use('/market', routes);
+app.use('/market', MarketControllers);
+
+app.use('/report', ReportController);
 
 app.listen(MY_PORT, () =>{
   console.log("Started application on port %d", MY_PORT);
